k8s-config/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sweportfoliosite_backend:latest
          ports:
            - containerPort: ${PORT}
          volumes:
            - name: app-data
              persistentVolumeClaim:
                claimName: app-data-pvc
          restartPolicy: unless-stopped

      networks:
        - app-network
