k8s-config/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sweportfoliosite_frontend
          ports:
            - containerPort: 5173
          dependsOn:
            - backend
          restartPolicy: unless-stopped
          resources:
            requests:
              cpu: 1
      networks:
        - app-network
