k8s-config/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
spec:
  podSelector:
    matchLabels:
      app: (both frontend and backend)
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: (both frontend and backend)
